--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "grunt": "^0.4.5",
     "grunt-available-tasks": "^0.5.0",
     "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-copy": "^0.7.0",
     "grunt-contrib-cssmin": "^0.10.0",
+    "grunt-contrib-handlebars": "^0.9.2",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-requirejs": "^0.4.4",
     "grunt-contrib-sass": "^0.8.1",
     "grunt-contrib-uglify": "^0.6.0",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-scss-lint": "^0.3.3",
-    "grunt-qunit-istanbul": "^0.4.5"
+    "grunt-qunit-istanbul": "^0.4.5",
+    "grunt-scss-lint": "^0.3.3"
   }
 }
